# DjangoCW

./: .env  all_data.json  jobs.sqlite  pyproject.toml  readme.md
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_text_blog_content_rename_date_blog_created_at_and_more.py
blog/templates/blog/: blog_list.html  main_page.html
config/: settings.py  urls.py
newsletter/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
newsletter/management/commands/: run_scheduler_fuctions.py  send_mailing.py  sm.py  sm2.py  sm3.py  start_scheduler.py
newsletter/migrations/: 0001_initial.py  0002_alter_mailingattempt_options.py  0003_mailing_interval.py  0004_alter_mailing_frequency_alter_mailing_status.py  0005_remove_mailing_interval.py  0006_alter_mailing_frequency.py  0007_alter_mailing_datetime_first_mailing.py  0008_alter_mailing_datetime_first_mailing.py  0009_alter_mailing_datetime_first_mailing.py  0010_mailing_date_time_last_mailing.py  0011_alter_mailing_date_time_last_mailing.py  0012_alter_mailing_date_time_last_mailing_and_more.py  0013_alter_mailing_status.py  0014_alter_client_comment.py  0015_alter_mailing_frequency.py  0016_client_author_mailing_author_message_author.py
newsletter/templates/newsletter/: 1.html  base.html  client_detail.html  (+11 more)
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
utlis/: 1.py  run_scheduler.py  run_scheduler_fuctions.py  sm2.py  sm3.py
(+3 files in other folders)
