[tool.poetry]
name = "coursework 6"
version = "0.1.0"
description = ""
authors = ["79096 <a.malakhinsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-apscheduler = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
