[tool.poetry]
name = "coursework 6"
version = "0.1.0"
description = ""
authors = ["79096 <a.malakhinsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-apscheduler = "^0.7.0"
black = "^24.10.0"
psycopg2-binary = "^2.9.10"
apscheduler = "^3.10.4"
pytz = "^2024.2"
sqlalchemy = "^2.0.36"
pillow = "^11.0.0"
psycopg2 = "^2.9.10"
django = "5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
